--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     um desenvolvedor Backend.
                 </h1>
                 <p>
-                    Sou um desenvolvedor, artista e estudante. Adoro a idéia de criar projetos
-                    e os ver em ação, sempre me intriguei tanto pela parte visual quanto pela parte estrutural de aplicações.
+                    Sou um desenvolvedor, artista e estudante. Adoro a ideia de criar projetos e os ver em ação, sempre me intriguei tanto pela parte visual quando pela parte estrutural de aplicações.
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
@@ -41,14 +40,14 @@
     <main>
         <section class="container about" id="about">
             <div class="main-title">
-                <h2>About <span>me </span><span class="bg-text"></span></h2>
+                <h2>Sobre <span>mim </span><span class="bg-text"></span></h2>
             </div>
             <div class="about-container">
                 <div class="left-about">
-                    <h4>Information about me</h4>
+                    <h4>Info:</h4>
                     <p>
                         Sou um desenvolvedor aprendiz, possuo tanto interesse no back-end como no front-end
-                        e atualmente estou a fazer um curso proficionalizante para me tornar um Fullstack.
+                        e atualmente estou a fazer um curso proficionalizante na resilia para me tornar um Fullstack.
 
                     </p>
                     <div class="btn-con">
@@ -74,12 +73,12 @@
 
             </div>
             <div class="about-stats">
-                <h4 class="stat-title">My Skills</h4>
+                <h4 class="stat-title">Habilidades:</h4>
                 <div class="progress-bars">
                     <div class="progress-bar">
                         <p class="prog-title">html5</p>
                         <div class="progress-con">
-                            <p class="prog-text">65%</p>
+                            <p class="prog-text">55%</p>
                             <div class="progress">
                                 <span class="html"></span>
                             </div>
@@ -95,7 +94,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">javascript</p>
+                        <p class="prog-title">Django</p>
                         <div class="progress-con">
                             <p class="prog-text">75%</p>
                             <div class="progress">
@@ -113,14 +112,14 @@
                     </div>
                 </div>
             </div>
-            <h4 class="stat-title">My Timeline</h4>
+            <h4 class="stat-title">Linha do tempo:</h4>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2022 - present</p>
-                    <h5>Programadores Cariocas</h5>
+                    <p class="tl-duration">2022 - presente</p>
+                    <h5>Resilia</h5>
                     <p>
                         Atualmente faço este curso de progamação com foco
                         na formação de programadores Fullstack.
@@ -137,11 +136,22 @@
                         completando o curso e adquirindo os certificados.
                     </p>
                 </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2022 - presente</p>
+                    <h5>Freecodecamp Python Backend development (Django)</h5>
+                    <p>
+                        Através deste curso consegui criar minhas primeiras aplicações
+                        em Django.
+                    </p>
+                </div>
             </div>
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2>My <span>Portfolio </span><span class="bg-text"></span></h2>
+                <h2>Meu <span>Portfolio </span><span class="bg-text"></span></h2>
             </div>
             <p class="port-text">
                 Aqui está alguns de meus trabalhos feitos
@@ -155,7 +165,7 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="https://github.com/TRQ10" class="icon" target="_blank" rel="external">
+                            <a href="https://github.com/TRQ10/Portfolio" class="icon" target="_blank" rel="external">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -166,7 +176,7 @@
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
-                    <h2>Contact <span>Me </span><span class="bg-text"></span></h2>
+                    <h2>Contate <span>aqui </span><span class="bg-text"></span></h2>
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
@@ -196,7 +206,7 @@
                                     <span>Educação</span>
                                 </div>
                                 <p>
-                                    <span>: Curso tecnico de programação</span>
+                                    <span>:Curso tecnico de programação</span>
                                 </p>
                             </div>
                             <div class="contact-item">
